--- a/app/components/lookbook/icon_button/component.html.erb
+++ b/app/components/lookbook/icon_button/component.html.erb
@@ -11,7 +11,7 @@
   disabled: disabled,
   aria: { label: tooltip } do %>
   <span x-ref="icon">
-    <%= icons.present? ? safe_join(icons) : (lookbook_render(:icon, name: icon, size: icon_size, ":class": "{'animate-spin': _spinning}") if icon) %>
+    <%= icons.present? ? safe_join(icons) : (lookbook_render(:icon, name: icon, size: icon_size, "x-bind:class": "{'animate-spin': _spinning}") if icon) %>
   </span>
   <% if tooltip %>
     <label class="hidden" x-ref="tooltip"><%= tooltip %></label>
