--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -22,10 +22,10 @@
         
         <%= lookbook_render :split_layout,
           alpine_data: "$store.layout.main",
-          ":class": "$store.layout.mobile && '!block'" do |layout| %>
+          "x-bind:class": "$store.layout.mobile && '!block'" do |layout| %>
 
           <% layout.with_pane id: "app-sidebar", class: "flex flex-col bg-lookbook-sidebar-bg relative translate-x-0",
-            ":class": "{
+            "x-bind:class": "{
               'transition': $store.layout.mobile,
               'translate-x-full': $store.layout.mobile && sidebarHidden,
               '!absolute right-0 bottom-0 top-[40px] h-[calc(100%_-_40px)] w-full max-w-[420px] z-[1001] border-l border-lookbook-divider': $store.layout.mobile
@@ -93,7 +93,7 @@
             <% end %>
           <% end %>
 
-          <% layout.with_pane id: "app-main", class: "overflow-hidden h-full", ":class": "$store.layout.mobile && 'w-screen'" do %>
+          <% layout.with_pane id: "app-main", class: "overflow-hidden h-full", "x-bind:class": "$store.layout.mobile && 'w-screen'" do %>
             <%= content_for?(:main) ? yield(:main) : yield %>
           <% end %>
         <% end %>
