Dummy app improvements

--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lookbook Demo App</title>
+  <title>Lookbook dummy app</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   
-  <%= stylesheet_link_tag "demo.css" %>
+  <%= stylesheet_link_tag "dummy" %>
 </head>
 <body>
   <%= yield %>
