--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
   
-  <%= stylesheet_link_tag "dummy" %>
+  <%= stylesheet_link_tag "application" %>
 </head>
 <body>
   <%= yield %>
