More test suite setup

--- a/test/dummy/app/views/dummy/index.html.erb
+++ b/test/dummy/app/views/dummy/index.html.erb
@@ -4,7 +4,7 @@
 <p>All system/integration tests in the Minitest test suite run against this app.</p>
 
 <p>
-  <%= link_to lookbook_path do %>
+  <%= link_to lookbook_path, id: "lookbook-link" do %>
     Go to the Lookbook UI &rarr;
   <% end %>
 </p>
