--- a/test/dummy/app/views/layouts/application.html.erb
+++ b/test/dummy/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Lookbook dummy app</title>
+  <title><%= content_for?(:title) ? yield(:title) : "Lookbook dummy app" %></title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   
   <%= csrf_meta_tags %>
