--- a/test/dummy/app/views/layouts/preview.html.erb
+++ b/test/dummy/app/views/layouts/preview.html.erb
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <title><%= content_for?(:title) ? yield(:title) : app_title %></title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <meta name="color-scheme" content="light dark">
 
-  <%= csrf_meta_tags %>
-  <%= csp_meta_tag %>
-  
-  <%= stylesheet_link_tag "pico" %>
-  <%= stylesheet_link_tag "app" %>
-</head>
-<body>
-  <%= yield %>
-</body>
+<html lang="en">
+  <head>
+    <title><%= content_for?(:title) ? yield(:title) : app_title %></title>
+
+    <meta name="preview" content="width=device-width,initial-scale=1">
+    <meta name="color-scheme" content="light dark">
+
+    <%= csrf_meta_tags %>
+    <%= csp_meta_tag %>
+
+    <%= lookbook_preview_assets %>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css">
+
+    <%= stylesheet_link_tag "app" %>
+  </head>
+
+  <body data-layout="preview"><%= yield %></body>
 </html>
