--- a/app/views/layouts/lookbook/pages.html.erb
+++ b/app/views/layouts/lookbook/pages.html.erb
@@ -1,5 +1,15 @@
+<% if @page %>
+  <% content_for :title do %>
+    <%= "#{@page.label} :: Pages" %>
+  <% end %>
+<% end %>
+
 <% content_for :sidebar do %>
-  <lb-sidebar label="Documentation" icon="notebook-text" slot="sidebar">
+  <lb-sidebar
+    label="<%= Lookbook.config.page_collection_label %>"
+    icon="notebook-text"
+    slot="sidebar"
+  >
     <lb-nav activepath="<%= url_for %>" slot="nav" persist-as="nav.pages">
       <lb-data slot="items" format="json" id="pages-data">
         <%= @pages.to_tree.children.sort.to_json %>
@@ -9,9 +19,9 @@
         No pages match your filter.
       </div>
 
-      <div slot="placeholder">
-        It looks like you haven't created any pages yet.
-      </div>
+      <lb-blankslate icon="notepad-text" slot="blank-slate">
+        <p>It looks like you haven't created any pages yet.</p>
+      </lb-blankslate>
     </lb-nav>
   </lb-sidebar>
 <% end %>
