--- a/app/views/lookbook/specs/show.html.erb
+++ b/app/views/lookbook/specs/show.html.erb
@@ -1,11 +1,11 @@
 <%
   # TODO - clean up breadcrumb generation
-  spec_note_parts = @spec.notes.present? ? @spec.note_parts : {}
+  spec_notes = collate_notes(@spec)
   breadcrumb_items = @spec.lookup_path.split("/")
   breadcrumb_items.pop
 %>
 
-<lb-spec heading="<%= spec_note_parts[:heading] || @spec.label %>" id="<%= @spec.lookup_hash %>">
+<lb-spec heading="<%= spec_notes.heading || @spec.label %>" id="<%= @spec.lookup_hash %>">
   <lb-breadcrumb-nav slot="breadcrumb">
     <%= link_to lookbook_specs_path do %>
       <lb-icon name="layers-2"></lb-icon>
@@ -18,26 +18,22 @@
     <span><%= @spec.label %></span>
   </lb-breadcrumb-nav>
 
-  <% if spec_note_parts[:body].present? %>
+  <% if spec_notes.body.present? %>
     <lb-spec-section>
-      <lb-prose markdown slot="notes"><%= spec_note_parts[:body] %></lb-prose>
+      <lb-prose markdown slot="notes"><%= spec_notes.body %></lb-prose>
     </lb-spec-section>
   <% end %>
 
   <% @spec.scenarios.each do |scenario| %>
-    <% note_parts = scenario.note_parts %>
+    <% scenario_notes = collate_notes(scenario) %>
 
     <lb-spec-section
-      heading="<%= note_parts[:heading] || scenario.label %>"
+      heading="<%= scenario_notes.heading || scenario.label %>"
       link="<%= lookbook_scenario_path(@spec, scenario) %>"
     >
-      <% if note_parts[:body].present? %>
-        <lb-prose markdown slot="notes"><%= note_parts[:body] %></lb-prose>
+      <% if scenario_notes.body.present? %>
+        <lb-prose markdown slot="notes"><%= scenario_notes.body %></lb-prose>
       <% end %>
-
-      <lb-snippet id="source-snippet" numbered lint>
-        some code <%# = collate_source(@scenarios) %>
-      </lb-snippet>
 
       <lb-viewport
         src="<%= scenario.preview_path %>"
@@ -45,6 +41,10 @@
         resize="horizontal"
         persist-as="spec.scenario.viewport.<%= @spec.id %>"
       ></lb-viewport>
+
+      <lb-snippet id="source-snippet" numbered lint>
+        some code <%# = collate_source(@scenarios) %>
+      </lb-snippet>
     </lb-spec-section>
   <% end %>
 </lb-spec>
