--- a/app/views/lookbook/embeds/scenario.html.erb
+++ b/app/views/lookbook/embeds/scenario.html.erb
@@ -1,4 +1,5 @@
-<% embed_inspector_id = request_path_hash + @scenario.lookup_hash %>
+<% scenarios = flatten_and_render(@scenario)
+  embed_inspector_id = request_path_hash + @scenario.lookup_hash %>
 
 <lb-embed-inspector persist-as="embed-inspector.<%= embed_inspector_id %>">
   <lb-viewport
@@ -16,7 +17,7 @@
     slot="panel"
   >
     <lb-snippet lang="ruby" id="embed-source-snippet" numbered>
-      <%= collate_source(@scenarios) %>
+      <%= collate_source(scenarios) %>
     </lb-snippet>
   </lb-panel>
 
@@ -27,7 +28,7 @@
     slot="panel"
   >
     <lb-snippet lang="html" id="embed-result-snippet" numbered>
-      <%= collate_output(@scenarios) %>
+      <%= collate_output(scenarios) %>
     </lb-snippet>
   </lb-panel>
 </lb-embed-inspector>
