Fix list item styling

--- a/app/frontend/styles/host.css
+++ b/app/frontend/styles/host.css
@@ -9,6 +9,7 @@
 
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  text-rendering: optimizeLegibility;
 
   scrollbar-color: var(--lookbook-neutral-fill-quiet) transparent;
   scrollbar-width: thin;
@@ -20,13 +21,6 @@
   box-sizing: border-box;
 }
 
-h1,
-h2,
-h3,
-h4,
-p,
-ul,
-ol,
 button {
   all: unset;
   display: revert;
@@ -37,7 +31,6 @@ ul,
 menu {
   all: unset;
   display: revert;
-  list-style: none;
 }
 
 input,
