Add noop buttons to sidebar toolbar

--- a/app/frontend/components/sidebar/sidebar.css
+++ b/app/frontend/components/sidebar/sidebar.css
@@ -6,9 +6,9 @@
 
 #toolbar {
   background-color: var(--lookbook-surface-1);
-  &::part(container) {
+  /*&::part(container) {
     padding-inline: var(--lookbook-size-md);
-  }
+  }*/
 }
 
 #label {
