--- a/app/views/layouts/lookbook/skeleton.html.erb
+++ b/app/views/layouts/lookbook/skeleton.html.erb
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <meta name="preview" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <link
       rel="icon"
