--- a/test/dummy/previews/dev/navigation/navbar_component_preview/dark.html.erb
+++ b/test/dummy/previews/dev/navigation/navbar_component_preview/dark.html.erb
@@ -15,4 +15,5 @@
 ]) do |nav| %>
   <%= nav.with_avatar src: "https://loremflickr.com/200/200" %>
 <% end %>
-<p class='asda'>linter should warn about this</p>
+
+<p class="asda">linter should warn about this</p>
